manifests/emqx-iot/emqx/emqx-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
  namespace: iot-playground
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: emqx-http
  
  hostnames:
    - emqx.local
  
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      
      backendRefs:
        - name: emqx-dashboard
          port: 18083
