manifests/emqx-iot/emqx/mqtt-tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: emqx-mqtt
  namespace: iot-playground
spec:
  parentRefs:
    - name: my-gateway
      namespace: default
      sectionName: emqx-mqtt
  
  rules:
    - backendRefs:
        - name: emqx-listeners
          port: 1883
